--- a/index.html
+++ b/index.html
@@ -6,22 +6,9 @@
         <title> Lock Switch </title>
     </head>
     <body>
-        <script>
-            function onClick() {
-                var status = document.getElementById("status");
-
-                if (status.innerText == "Door is open") {
-                    status.innerText = "Door is locked";
-                } else {
-                    status.innerText = "Door is open";
-                }
-            }
-        </script>
-        <div>
-            <span id="status">Door is locked</span>
-            <br />
-            <button onclick="onClick()"> switch</button>
-        <div>
-    </body>
+        <h1> This is the main page </h1> 
+        <h2> Light 1 </h2> 
+        <h2> Lock 1 </h2> 
+     </body>
 </html>
  
