--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <h1> This is the main page </h1> 
-        <h2> Light 1 </h2> 
-        <h2> Lock 1 </h2> 
+        <a href="https://www.w3schools.com"> Light 1 </a>
+        <a href="lock.html"> Lock 1 </a> 
      </body>
 </html>
  
