--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1> This is the main page </h1> 
-        <a href="https://www.w3schools.com"> Light 1 </a>
+        <a href="Light.html"> Light 1 </a>
         <br> 
         <a href="lock.html"> Lock 1 </a> 
      </body>
