--- a/light.html
+++ b/light.html
@@ -1,7 +1,11 @@
-<html>
-<head>
-<title>Home Automation System</title>  <!-- This will be the page title -->
-</head>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <link rel="stylesheet" href="style.css" />
+        <title> Light Switch </title>
+    </head>
+  
 <body> <!-- All the data in it will be shown on the page -->
 <button id="10" class="led">Toggle Pin 11</button> <!--  This will create the button for pin 10 -->
 <script src="jquery.min.js"></script> <!-- This will read the script from the jquery -->
