--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="style.css" />
-        <title> Lock Switch </title>
+        <title> Automation system </title>
     </head>
     <body>
         <h1> This is the main page </h1> 
