--- a/light.html
+++ b/light.html
@@ -7,7 +7,7 @@
     </head>
   
 <body> <!-- All the data in it will be shown on the page -->
-<button id="10" class="led">Toggle Pin 11</button> <!--  This will create the button for pin 10 -->
+<button id="10" class="led">Toggle Light</button> <!--  This will create the button for pin 10 -->
 <script src="jquery.min.js"></script> <!-- This will read the script from the jquery -->
 <script type="text/javascript">
 $(document).ready(function(){
